--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Electrocompon</title>
+  <meta name="description" content="Electrocompon es tu tienda de componentes eléctricos y electrodomésticos.">
+  <!-- Palabras clave no tienen tanto peso, pero puedes añadir: -->
+  <meta name="keywords" content="electrocompon, componentes electrónicos, electronica, electricidad, electrodomesticos, reparaciones electronicos">
   <!-- Hoja de estilo principal -->
   <link rel="stylesheet" href="styles.css"/>
   <!-- Librería SheetJS (XLSX) para leer CSV/Excel -->
