--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Electrocompon</title>
+  <title>ElectroCompon</title>
+  <meta name="google-site-verification" content="xQvPKw_UshU4YU509q9hooW6pqwfCwDiPQyd8hGB5-Y" />
   <meta name="description" content="Electrocompon es tu tienda de componentes eléctricos y electrodomésticos.">
   <!-- Palabras clave no tienen tanto peso, pero puedes añadir: -->
   <meta name="keywords" content="electrocompon, componentes electrónicos, electronica, electricidad, electrodomesticos, reparaciones electronicos">
@@ -48,7 +49,7 @@
           (LUNES A VIERNES): 9:30-13:30, 17:30-20:30
         </div>
         <div class="info-row mail-row">
-          PEDIDOS@ELECTROCOMPON.COM
+          TIENDA2@ELECTROCOMPON.COM
         </div>
         <div class="info-row phone-row">
           TELÉFONOS: 956 59 45 00 / 956 89 54 62
