--- a/index.html
+++ b/index.html
@@ -68,4 +68,8 @@
   <!-- Script principal -->
   <script src="app.js"></script>
 </body>
+<footer class="footer">
+  ©️ 2025 desarrollado y Diseñado por A² Vission
+</footer>
+
 </html>
