--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
 
   </div> <!-- Fin .page-container -->
 
+  <footer class="footer">
+    <div class="footer-content">
+      <p>Diseñado y desarrollado por <a href="https://www.a2vission.com" target="_blank" rel="noopener noreferrer">A² Vission</a></p>
+    </div>
+  </footer>
+
   <!-- Script principal -->
   <script src="app.js"></script>
 </body>
-<footer class="footer">
-  ©️ 2025 desarrollado y Diseñado por A² Vission
-</footer>
-
 </html>
