--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="keywords" content="electrocompon, componentes electrónicos, electronica, electricidad, electrodomesticos, reparaciones electronicos">
   <!-- Hoja de estilo principal -->
   <link rel="stylesheet" href="styles.css"/>
+  <link rel="icon" href="logo.png" type="image/png"/>
   <!-- Librería SheetJS (XLSX) para leer CSV/Excel -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 </head>
