--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
 
   <footer class="footer">
     <div class="footer-content">
-      <p>Diseñado y desarrollado por <a href="https://www.a2vission.com" target="_blank" rel="noopener noreferrer">A² Vission</a></p>
+      <p>
+        <a class="brand-credit" href="https://www.a2vission.com/" target="_blank" rel="noopener" aria-label="Desarrolladores y diseñadores A² Vission">
+          Desarrolladores y diseñadores A² Vission
+        </a>
+      </p>
     </div>
   </footer>
 
