--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <meta name="keywords" content="electrocompon, componentes electrónicos, electronica, electricidad, electrodomesticos, reparaciones electronicos">
   <!-- Hoja de estilo principal -->
   <link rel="stylesheet" href="styles.css"/>
-  <link rel="icon" href="logo.png" type="image/png"/>
+  <link rel="icon" href="logo.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="logo.png" sizes="192x192" type="image/png">
+  <link rel="apple-touch-icon" href="logo.png">
   <!-- Librería SheetJS (XLSX) para leer CSV/Excel -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 </head>
